# esp32-led

./: CMakeLists.txt  README.md  diagram.json  diagram1 copy.json  wokwi.toml
components/MyComponent/: CMakeLists.txt  MyComponent.c
main/: CMakeLists.txt  Kconfig.projbuild  main.cc
main/boards/: Kconfig.projbuild  board.h
main/boards/bread-wifi/: bread_wifi.cc  bread_wifi.h  config.h
